tests-system/unicode/output
bar.MyType Übergrößenträger {
           ^ unicode/instances.trlc:4: error: unexpected character 'Ü'
bar.MyType Übergrößenträger {
                 ^ unicode/instances.trlc:4: error: unexpected character 'ö'
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 2 error(s)
